syntax = "proto3";

package twodipd;

service TwoDIPD {
    rpc Join(JoinRequest) returns (JoinResponse) {}
}

message JoinRequest {
    string player_name = 1;
}

message JoinResponse {
    enum Status {
        OK = 0;
        DUPLICATE = 1;
        ERROR = 2;
    }
    Status status = 1;

    oneof status_oneof {
        int32 gameid = 2;
        string error_message = 3;
    }
}